syntax = "proto3";


option go_package = "/filecomponentsservice/pb";


message FileComponent {
    string user_id = 1;
    string file_path = 2;
    int32 start_line = 3;
    int32 end_line = 4;
}


message SavedFileComponent {
    int32 id = 1;
    string user_id = 2;
    string file_path = 3;
    int32 start_line = 4;
    int32 end_line = 5;
}


message SavedFileComponents {
    repeated SavedFileComponent saved_file_components = 1;
}


message FileComponents {
    repeated FileComponent file_components = 1;
}


message BatchExtractFileComponentsRequest {
    string user_id = 1;
    repeated string file_paths = 2;
}


message SavedFileComponentIds {
    repeated int32 saved_file_component_ids = 1;
}

service FileComponentsService {
    rpc BatchExtractFileComponents(BatchExtractFileComponentsRequest) returns (FileComponents);
    rpc SaveFileComponents(FileComponents) returns (SavedFileComponentIds);
    rpc GetSavedFileComponents(SavedFileComponentIds) returns (SavedFileComponents);
}